--- a/style.css
+++ b/style.css
@@ -1,16 +1,3 @@
-button {
-    border-style: none;
-    background-color: #636972;
-    width: 60px;
-    height: 25px;
-    
-} 
-
-button:hover {
-    border-style:groove;
-    background-color: #43484e;
-}
-
 h1 {
     font-size: 40px;
 }
@@ -23,16 +10,29 @@ body {
 }
 
 a {
-    color:rgb(38, 65, 184);
+    color: darksalmon;
+    padding: 15px;
+}
+
+a:hover {
+    color: lightcoral;
+    font-size: 110%;
+    
 }
 
 .nav {
     background-color: #2b2b2b !important;
     text-align: center;
+    padding-bottom: 5px;
 }
 
 .navLink {
     color: #e6e6e6;
+}
+
+.navLink:hover {
+    font-size: 120%;
+    color: lightcoral;
 }
 
 .content {
